PCX: ordering color values of current frame to match color values of previous frame

--- a/PictureConsoler/PictureConsoler.csproj
+++ b/PictureConsoler/PictureConsoler.csproj
@@ -66,6 +66,7 @@
     <Compile Include="PCM\MFrame.cs" />
     <Compile Include="PCM\MFrameDeck.cs" />
     <Compile Include="OutlineHighlighter.cs" />
+    <Compile Include="PCX\ColorValuesOrderer.cs" />
     <Compile Include="PCX\XFrame.cs" />
     <Compile Include="PCX\MassColorsDeterminor.cs" />
     <Compile Include="PCX\XFrameDeck.cs" />
