README.md is created; icon is updated; changes in displaying; changes in controls

--- a/PictureConsoler/PictureConsoler.csproj
+++ b/PictureConsoler/PictureConsoler.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon3.ico</ApplicationIcon>
+    <ApplicationIcon>icon4.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ConsoleColorsLib">
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Content Include="icon2.ico" />
     <Content Include="icon3.ico" />
+    <Content Include="icon4.ico" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
